--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>JSON data visualization</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"> -->
-    <link rel="stylesheet" href="css/style.css">
-    <!-- <script src="js/jQuery.js"></script>-->
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>-->
+  <link rel="stylesheet" href="css/style_alterable.css">
+  <script src="js/jQuery.js"></script>
+
+
 </head>
 
 <body>
+<h1>JSON data view</h1>
+
+
     <script src="js/index.js"></script>
 
 </body>
